# mnist_corrupted

./: .coverage  evaluate.dockerfile  model.pth  model.py  pyproject.toml  reproducibility_tester.py  train.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
conf/: config.yaml
conf/model/: model_conf.yaml
conf/training/: training_conf.yaml
models/: model.pth
src/: model.py  train.py
src_lightning/: data.py  model.py  train.py
src_wandb/: data.py  model.py  train.py  train_images.py
tests/: test_data.py  test_model.py  test_training.py
wandb/run-20260108_131920-5l4m1725/: run-5l4m1725.wandb
wandb/run-20260108_131920-5l4m1725/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_132233-t7i7sg6o/: run-t7i7sg6o.wandb
wandb/run-20260108_132233-t7i7sg6o/files/: config.yaml  wandb-metadata.json
wandb/run-20260108_132515-ynx52g0f/: run-ynx52g0f.wandb
wandb/run-20260108_132515-ynx52g0f/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_133213-oq2e5jsb/: run-oq2e5jsb.wandb
wandb/run-20260108_133213-oq2e5jsb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_133408-l6lo9bqv/: run-l6lo9bqv.wandb
wandb/run-20260108_133408-l6lo9bqv/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_133730-j45qw92o/: run-j45qw92o.wandb
wandb/run-20260108_133730-j45qw92o/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_134314-r3yk8wx8/: run-r3yk8wx8.wandb
(+31 files in other folders)
